2008-8-15 Patrick Galbraith <patg@patg.net> (4.008)
* Multi statement patch, thanks to Chris Heath!
* Disabled TAKE_IMP_DATA_VERSION because segfault with DBI < 1.607
* #29528: bind_param(..., SQL_FLOAT) ignores exponents - fixed, Thanks to
Tokuhiro Matsuno!
* Cleanups to make mysqlEmb work under Cygwin - Thanks to Chris Rodgers  
<http://rodgers.org.uk/> ! 
* Modified and disabled tests for MySQL version < 4.1 for unsupported features

2008-5-11 Patrick Galbraith <patg@patg.net> (4.007)

* Took out mysql_server_init call where not needed
* Complete re-write of test suit to use Test::More - tons of cleanups!
* Makefile.PL changes to use current user in 'make test' if not defined

2007-12-26 Patrick Galbraith <patg@patg.net> (4.006)

* Cleanups on OS X compile
* Fixes to syntax errors on AIX
* Removed test code that was leaving trace files around

2007-3-22 Patrick Galbraith <patg@patg.net> (4.005)

* Fixed mysql_warning issue < 4.1 (reminers, patches, help from ROAM, (issue 25713)
* makerealclean patch from ROAM (issue #25714)
* sqlstate cleanup patch from ROAM
* Replaced all references to dbis to use imp_xxh per DBI best practices
* Fix to dbd_st_destroy - added back previously removed 'free everything' code which 
  had been moved to dbd_st_finish, causing a crash upon freeing of bind values 
  after all rows resulting from one execution of a query have been fetched. This meant
  that next attempt to execute the prepared statement would segfault. This
  work thanks to Rainer Weikusat!
* Removed all 'FindNewTable' calls in all tests. Just use 't1' for all tests to 
  simplify things. Plus, this is how MySQL internall tests.
* Better 'skip test' logic in some tests that were still running when they shouldn't 
  have been.



2007-3-22 Patrick Galbraith <patg@patg.net> Jim Winstead <jimw@mysql.com> (4.004)
* Work around a bug in old 3.23 servers by specifying NOT NULL for fields used
  as a primary key in tests. (Bug #20325, reported by Julian Ladisch)